[package]
name = "cargo-git-open"
version = "0.0.8"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["git"]
authors = ["Jesus Galvan <2798097+jsgv@users.noreply.github.com>"]
repository = "https://github.com/jsgv/git-open"
homepage = "https://github.com/jsgv/git-open"
categories = ["command-line-utilities"]

[[bin]]
name = "git-open"
path = "src/main.rs"

[lib]
name = "gitopen"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
git2 = { version = "0.17.2", features = ["openssl-sys", "https"] }
open = "5.0.0"
regex = "1.9.1"
reqwest = "0.11.18"
