[package]
name = "cargo-git-open"
version = "0.0.9"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["Jesus Galvan <2798097+jsgv@users.noreply.github.com>"]
repository = "https://github.com/jsgv/git-open"
homepage = "https://github.com/jsgv/git-open"
description = "Open a git repository in a web browser"
categories = [
    "command-line-utilities"
]
keywords = [
    "git",
    "cli"
]

[[bin]]
name = "git-open"
path = "src/main.rs"

[lib]
name = "gitopen"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
git-url-parse = "0.4.4"
git2 = { version = "0.18.1", features = ["openssl-sys", "https"] }
graphql_client = { version = "0.13.0", features = ["reqwest-blocking"] }
open = "5.0.0"
regex = "1.10.2"
reqwest = "0.11.22"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
